[package]
name = "i256"
version = "0.2.2"
authors = ["Alex Huszagh <ahuszagh@gmail.com>"]
description = "Optimized implementations of 256-bit signed and unsigned integers."
repository = "https://github.com/Alexhuszagh/i256-rs"
readme = "README.md"
keywords = ["no_std", "bignum", "int", "math", "uint"]
license = "MIT OR Apache-2.0"
categories = ["no-std", "data-structures", "encoding"]
edition = "2021"
rust-version = "1.59"
exclude = [
    "assets/*",
    "docs/*",
    "etc/*",
    "cargo-timing*.html",
    ".git*",
    "clippy.toml",
    "rustfmt.toml",
    "devel/*",
    "CODE_OF_CONDUCT.md",
    "SECURITY.md"
]

[features]
default = ["stdint"]
# enable the standard, fixed-width integer APIs for scalar operations.
stdint = []
# Enable the `U384` and `I384` types.
i384 = []
# Enable the `U512` and `I512` types.
i512 = []
# Enable the `U1024` and `I1024` types.
i1024 = []

# Internal only features.
# Enable the lint checks.
lint = []
# For benchmarking our no ASM routines.
noasm = []
# For forcing 32-bit limbs for testing.
limb32 = []

# Deprecated feature; does nothing.
std = []

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(have_overflow_checks)',
]

[profile.dev]
opt-level = 0
debug = true
lto = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = true

[dependencies]
num-traits = { version = "0.2.18", default-features = false, optional = true }

[package.metadata.docs.rs]
features = ["i384", "i512", "i1024", "stdint", "num-traits"]
rustdoc-args = ["--cfg", "docsrs"]
